Sforce8 Project Data/src/objects/Lead__c.object
<CustomObject>
    <fields>
        <fullName>Segment__c</fullName>
        <label>セグメント</label>
        <picklist>
            <picklistValues>
                <fullName>通常料金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>自社プラン</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>特別料金</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WEB個人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGT個人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>海外個人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>コンプ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ダイレクト団体</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AGT団体</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>修学旅行</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>募集団体</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>海外団体</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>挙式列席者</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>個人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>団体</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SeminarOrderFlg__c</fullName>
        <defaultValue>false</defaultValue>
        <description>該当予約情報はセミナー予約する場合、該当フラグをチェックする</description>
        <label>セミナー</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceCheckTime__c</fullName>
        <label>サービス_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ServiceCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>サービス_確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ServiceChecker__c</fullName>
        <label>サービス_確認者</label>
        <picklist>
            <picklistValues>
                <fullName>Arai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kawai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Souma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shuden</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>StayPersons__c</fullName>
        <defaultValue>1</defaultValue>
        <label>予約人数</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Style__c</fullName>
        <label>形式</label>
        <picklist>
            <picklistValues>
                <fullName>卓盛</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>立食</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sum01__c</fullName>
        <formula>IF((SumHiru__c = 1 || ISPICKVAL(ReservedType__c, &quot;婚礼&quot;))&amp;&amp; ISPICKVAL(Rroom__r.UseOfRoom__c, &quot;客室&quot;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum01</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum02__c</fullName>
        <description>IF(SumHiru__c = 1 &amp;&amp; ISPICKVAL(Rroom__r.UseOfRoom__c, &quot;客室&quot;) ,1,0)</description>
        <formula>IF(SumYoru__c= 1 &amp;&amp; ISPICKVAL(Rroom__r.UseOfRoom__c, &quot;客室&quot;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum02</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sum03__c</fullName>
        <description>&amp;&amp; ( NOT(CONTAINS(Name, &quot;クローズ&quot;)) || NOT(CONTAINS(Name, &quot;予約不可&quot;)) )</description>
        <formula>IF(SumOUT__c = 1 &amp;&amp; ISPICKVAL(Rroom__r.UseOfRoom__c, &quot;客室&quot;) ,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sum03</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumHiru__c</fullName>
        <formula>IF (ISPICKVAL(ReservedType__c, &quot;昼 部屋&quot;) &amp;&amp; Hiru__c = 1, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumHiru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumIN__c</fullName>
        <description>&amp;&amp; ( NOT(CONTAINS(Name, &quot;クローズ&quot;)) || NOT(CONTAINS(Name, &quot;予約不可&quot;))</description>
        <formula>if (CONTAINS(Name, &quot;クローズ&quot;) || CONTAINS(Name, &quot;予約不可&quot;), 0, IF((ISPICKVAL( ReservedType__c , &quot;泊 素&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 ２食&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 朝半&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 夕半&quot;)|| ISPICKVAL(ReservedType__c, &quot;婚礼&quot;)||ISPICKVAL(ReservedType__c, &quot;&quot;)) &amp;&amp; (DATEVALUE(EntryTime__c) &lt;&gt;  checkoutdate__c), 1, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumOUT__c</fullName>
        <formula>if (CONTAINS(Name, &quot;クローズ&quot;) || CONTAINS(Name, &quot;予約不可&quot;) || CONTAINS(Name, &quot;-1&quot;), 0, IF((ISPICKVAL( ReservedType__c , &quot;泊 素&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 ２食&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 朝半&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 夕半&quot;)|| ISPICKVAL(ReservedType__c, &quot;&quot;)) &amp;&amp; (DATEVALUE(EntryTime__c) &lt;&gt; checkoutdate__c  ), 1, 0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumOUT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumSTAY__c</fullName>
        <formula>if (CONTAINS(Name, &quot;クローズ&quot;) || CONTAINS(Name, &quot;予約不可&quot;), 0, IF(DATEVALUE(EntryTime__c) &lt;&gt; DATEVALUE(Departure__c)  &amp;&amp; (CONTAINS(Name, &quot;-&quot;) || CONTAINS(Name, &quot;泊&quot;)) &amp;&amp; NOT(CONTAINS(Name, &quot;-1&quot;)) ,1,0) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumSTAY</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SumYoru__c</fullName>
        <formula>IF ( (ISPICKVAL(ReservedType__c, &quot;夕 部屋&quot;) || ISPICKVAL(ReservedType__c, &quot;婚礼&quot;))&amp;&amp; Hiru__c = 0, 1, 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SumYoru</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VBCheckTime__c</fullName>
        <label>VB_確認日時</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>VBCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <label>VB_確認済</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>VBChecker__c</fullName>
        <label>VB_確認者</label>
        <picklist>
            <picklistValues>
                <fullName>---</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WDrink1__c</fullName>
        <description>ケータリング用（ウェルカムドリンク）</description>
        <label>ウェルカムドリンク</label>
        <picklist>
            <picklistValues>
                <fullName>有</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WDrink2__c</fullName>
        <description>ケータリング用（ウェルカムドリンク種類）</description>
        <label>ウェルカムドリンク種類</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Week__c</fullName>
        <formula>IF( 
    ISNULL(EntryTime__c),
    &quot;&quot;,
    CASE( MOD( DATEVALUE(EntryTime__c) - DATE(1900, 1, 7), 7),
	 0, &apos;日&apos;,
	 1, &apos;月&apos;,
	 2, &apos;火&apos;,
	 3, &apos;水&apos;,
	 4, &apos;木&apos;,
	 5, &apos;金&apos;,
	 &apos;土&apos;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>到着曜日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X10__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>夕 料理10</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (夕 料理10)</relationshipLabel>
        <relationshipName>reservRdki</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>X1food1__c</fullName>
        <description>ps__lunchX02__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>昼料1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X1y1__c</fullName>
        <description>ps__OryourimeiX02__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>夕料1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2__c</fullName>
        <label>室料2</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2food2__c</fullName>
        <description>ps__food1__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>昼料2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X2y2__c</fullName>
        <description>ps__yfood1__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>夕料2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3__c</fullName>
        <label>室料3</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3food3__c</fullName>
        <description>ps__food2__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>昼料3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>X3y3__c</fullName>
        <description>ps__Dinner2__r.ps__Currency__c</description>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>未使用</inlineHelpText>
        <label>夕料3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>checkoutdate__c</fullName>
        <formula>DATEVALUE(Departure__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>$出発日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>chu2__c</fullName>
        <label>昼 料理3 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chu3__c</fullName>
        <label>昼 料理4 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chuy1__c</fullName>
        <label>夕 料理2 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>chuy__c</fullName>
        <label>夕 料理1 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>clubflag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>clubflag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>commentran2__c</fullName>
        <label>コメント欄</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>commentran3__c</fullName>
        <inlineHelpText>担当者の判断にて、考慮した方がよいことがら</inlineHelpText>
        <label>コメント欄</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>commentran4__c</fullName>
        <inlineHelpText>担当者の判断にて、考慮した方がよいことがら</inlineHelpText>
        <label>コメント欄</label>
        <length>2048</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>email__c</fullName>
        <label>メール本文</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>food1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>昼 料理2</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (昼 料理2)</relationshipLabel>
        <relationshipName>R00N10000000rKw2EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>food2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>昼 料理3</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (昼 料理3)</relationshipLabel>
        <relationshipName>R00N10000000rKw7EAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>food3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>昼 料理4</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (昼 料理4)</relationshipLabel>
        <relationshipName>R00N10000000rKwCEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>kakunin__c</fullName>
        <description>ケータリング支払い関係項目</description>
        <label>確認書</label>
        <picklist>
            <picklistValues>
                <fullName>有</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>kessan__c</fullName>
        <description>ケータリング支払い関係項目</description>
        <label>決算書</label>
        <picklist>
            <picklistValues>
                <fullName>未</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>済</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>lunchX02__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>11:30〜14:00(ラストオーダー)</description>
        <label>昼 料理1</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (昼 料理1)</relationshipLabel>
        <relationshipName>R00N10000000rGrAEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>microbusflag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>microbusflag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>numsofdinner2__c</fullName>
        <label>夕 料理3 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>numsofdinner3__c</fullName>
        <label>夕 料理4 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>numsofdinner4__c</fullName>
        <label>夕 料理5 数</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>refAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>請求先</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>Booking6BKP</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>refTypeOfRooms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部屋タイプ</label>
        <referenceTo>TypeOfRooms__c</referenceTo>
        <relationshipLabel>ご予約</relationshipLabel>
        <relationshipName>typeOfRooms</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>report129__c</fullName>
        <formula>IF( 
    ISNULL(EntryTime__c),
    &quot;&quot;,
    CASE( MOD( DATEVALUE(EntryTime__c) - DATE(1900, 1, 7), 7),
   0, &apos;g) &apos; &amp; TEXT(MONTH(DATEVALUE(EntryTime__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(EntryTime__c))) &amp; &apos;(日)&apos;,
   1, &apos;a) &apos; &amp; TEXT(MONTH(DATEVALUE(EntryTime__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(EntryTime__c))) &amp; &apos;(月)&apos;,
   2, &apos;b) &apos; &amp; TEXT(MONTH(DATEVALUE(EntryTime__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(EntryTime__c))) &amp; &apos;(火)&apos;,
   3, &apos;c) &apos; &amp; TEXT(MONTH(DATEVALUE(EntryTime__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(EntryTime__c))) &amp; &apos;(水)&apos;,
   4, &apos;d) &apos; &amp; TEXT(MONTH(DATEVALUE(EntryTime__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(EntryTime__c))) &amp; &apos;(木)&apos;,
   5, &apos;e) &apos; &amp; TEXT(MONTH(DATEVALUE(EntryTime__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(EntryTime__c))) &amp; &apos;(金) &apos;,
   &apos;f) &apos; &amp; TEXT(MONTH(DATEVALUE(EntryTime__c))) &amp; &quot;/&quot; &amp; TEXT(DAY(DATEVALUE(EntryTime__c))) &amp; &apos;(土)&apos;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>予約日</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>room1__c</fullName>
        <label>室料1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tokuten1__c</fullName>
        <inlineHelpText>プランについている特典の金額を入力</inlineHelpText>
        <label>特典1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tokuten2__c</fullName>
        <label>特典2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tokuten3__c</fullName>
        <label>特典3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tokutren4__c</fullName>
        <label>特典4</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>touroku__c</fullName>
        <description>ケータリング支払い関係項目</description>
        <label>登録票</label>
        <picklist>
            <picklistValues>
                <fullName>有</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>無</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>yfood1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>夕 料理2</label>
        <referenceTo>FoodMenu__c</referenceTo>
        <relationshipLabel>ご予約 (夕 料理2)</relationshipLabel>
        <relationshipName>R00N10000000rKwYEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ご予約</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Relcontact__c</columns>
        <columns>EntryTime__c</columns>
        <columns>Rroom__c</columns>
        <columns>StayPersons__c</columns>
        <columns>ReservedType__c</columns>
        <columns>ReservedDate__c</columns>
        <columns>ReservedStatus__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Field298__c</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>予約名</label>
        <type>Text</type>
    </nameField>
    <recordTypes>
        <fullName>BaseRecType</fullName>
        <active>true</active>
        <description>施設[旅館]</description>
        <label>基本</label>
    </recordTypes>
    <recordTypes>
        <fullName>BookingRecType</fullName>
        <active>true</active>
        <description>施設[ホテル]</description>
        <label>宿泊</label>
    </recordTypes>
    <recordTypes>
        <fullName>CateringRecType</fullName>
        <active>true</active>
        <label>ケータリング</label>
    </recordTypes>
    <recordTypes>
        <fullName>EnkaiRecType</fullName>
        <active>true</active>
        <label>宴会と会議室</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>CheckBooking</fullName>
        <active>false</active>
        <errorConditionFormula>BookingFlag__c</errorConditionFormula>
        <errorMessage>ダブルブッキングが発生しました！お部屋の割当を変更してください！
予約を受けたときは、必ずお部屋の空状況を確認しましょう！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckCancelstatus</fullName>
        <active>false</active>
        <errorConditionFormula>IF ( ISCHANGED( ReservedStatus__c ) , IF( ISPICKVAL(ReservedStatus__c, &quot;キャンセル&quot;),  IF( ISCHANGED(Comment3__c), false,true),false ),false )</errorConditionFormula>
        <errorMessage>予約ステータスをキャンセル更新された場合、特記事項に”キャンセル対応　名前&quot;を追加してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckCheckreserve</fullName>
        <active>false</active>
        <errorConditionFormula>IF ( CONTAINS(RIGHT(Comment3__c,7), &quot;Jinya&quot;), false ,IF ( ISPICKVAL( ReservedStatus__c , &quot;確定&quot;) ,  IF (Field356__c   ,false,true),false))</errorConditionFormula>
        <errorMessage>予約確認済みのチェックを入れて、予約確認の人を選択してください。
（団体予約は少なくとも３日まえまでに確定にする必要があります）</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckCheckreserve2</fullName>
        <active>false</active>
        <errorConditionFormula>IF ( CONTAINS(RIGHT(Comment3__c,7), &quot;Jinya&quot;), false ,IF ( CONTAINS(RIGHT(Comment3__c,7), &quot;Jinya&quot;), false ,IF ( Field356__c , NOT( ISPICKVAL( ReservedStatus__c , &quot;確定&quot;) ), false) ) )</errorConditionFormula>
        <errorMessage>予約ステータスは確定のみです！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckDayofInOut</fullName>
        <active>false</active>
        <errorConditionFormula>if ( ISPICKVAL( ReservedType__c , &quot;泊 素&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 ２食&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 朝半&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 夕半&quot;), if( DATEVALUE(EntryTime__c + 1) = DATEVALUE(Departure__c) , False, if(ISPICKVAL(ReservedType__c, &quot;&quot;),False,True)), if( DATEVALUE(EntryTime__c) = DATEVALUE(Departure__c), False, if(ISPICKVAL(ReservedType__c, &quot;&quot;),False,True)) )</errorConditionFormula>
        <errorDisplayField>Departure__c</errorDisplayField>
        <errorMessage>宿泊のときは出発日は次の日となります、また、予約タイプが婚礼のときは、特別に到着日と出発日は同じ日です！(婚礼のお客様がご宿泊される場合、ご利用目的の項目は婚礼、予約タイプは泊となります)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckKentouchuu</fullName>
        <active>false</active>
        <description>&quot;CONTAINS(  food4__r.Name  , &quot;検討中&quot;) || &quot; delete</description>
        <errorConditionFormula>IF ( (CONTAINS(  lunchX02__r.Name  , &quot;検討中&quot;) || CONTAINS(   food1__r.Name  , &quot;検討中&quot;) || CONTAINS( food2__r.Name  , &quot;検討中&quot;) || CONTAINS(  food3__r.Name  , &quot;検討中&quot;) || CONTAINS(  OryourimeiX02__r.Name  , &quot;検討中&quot;) || CONTAINS(  yfood1__r.Name  , &quot;検討中&quot;) || CONTAINS(  Dinner2__r.Name  , &quot;検討中&quot;) || CONTAINS(  Dinner2__r.Name  , &quot;検討中&quot;) || CONTAINS(  Dinner3__r.Name  , &quot;検討中&quot;) || CONTAINS(   Dinner4__r.Name   , &quot;検討中&quot;) ) , ISPICKVAL(ReservedStatus__c, &quot;確定&quot;),FALSE)</errorConditionFormula>
        <errorMessage>お料理に検討中の項目がありますので、予約ステータスを確定にはできません！
お料理を選択してください。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckReservationDate</fullName>
        <active>false</active>
        <errorConditionFormula>EntryTime__c   &lt;   ReservedDate__c</errorConditionFormula>
        <errorDisplayField>ReservedDate__c</errorDisplayField>
        <errorMessage>過去に対しての予約はありえません！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckReservationPersons</fullName>
        <active>false</active>
        <errorConditionFormula>if ( CONTAINS(Name, &quot;の方&quot;)  ,  if ( ISBLANK( StayPersons__c )  ||  StayPersons__c = 0 , false, true),false )</errorConditionFormula>
        <errorMessage>予約名に”の方”がある場合、予約人数はゼロとして、該当の部屋に宿泊する男、女、子供の内訳人数のみ入力してください！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckReservationTypeAndDinner</fullName>
        <active>false</active>
        <description>夕の予約なのに昼食料理があります、夕料理に変更して下さい。</description>
        <errorConditionFormula>IF (
(Hiru__c = 0 &amp;&amp; (DATEVALUE(Departure__c) = DATEVALUE(EntryTime__c) ) ),
IF (NOT(ISNULL(  chu__c  )),TRUE,FALSE) ,
FALSE)</errorConditionFormula>
        <errorMessage>夕の予約なのに昼食料理があります、夕料理に変更して下さい。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckReservationTypeAndLunchAndDinner</fullName>
        <active>false</active>
        <description>昼の予約なのに夕食メニューに定義ありの場合などのルール</description>
        <errorConditionFormula>IF ( 
(Hiru__c = 1 &amp;&amp; (DATEVALUE(Departure__c)  =  DATEVALUE(EntryTime__c) ) ), 
IF (NOT(ISNULL( chuy__c )),TRUE,FALSE) , 
FALSE)</errorConditionFormula>
        <errorMessage>昼の予約なのに夕食料理があります、昼料理に変更して下さい。</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckReservatorPlus</fullName>
        <active>false</active>
        <errorConditionFormula>IF ( CONTAINS(RIGHT(Comment3__c,7), &quot;Jinya&quot;), false ,IF ( ISNEW(),false, IF (ISCHANGED(ReservedContact__c), false, if ( ISCHANGED( Comment3__c ), IF ( CONTAINS(RIGHT(Comment3__c,12), &quot;Jinyaforce&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Morimoto&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Ono&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;小野&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Kino&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;木野&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Aoki&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;青木&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Katou&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;加藤&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Kasaba-Manager&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;笠羽&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Ebata&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;江畑&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Yamanashi&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;山梨&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Mineo&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;峰尾&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Akiyama&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;秋山&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Kobayashi&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;小林&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Horikoshi&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;堀越&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Miyazaki-President&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;宮﨑社長&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Miyazaki-Wakaokami&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;宮﨑若女将&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Igarashi&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;五十嵐&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Yamauchi&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;山内&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Yaegashi&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;八重樫&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;Hamano&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;神谷&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;伊藤&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;飯塚&quot;) ||CONTAINS(RIGHT(Comment3__c,12), &quot;仁科&quot;) || CONTAINS(RIGHT(Comment3__c,12), &quot;山鹿&quot;)  , false, true),true) ) ) )</errorConditionFormula>
        <errorMessage>本予約データの更新のときは、必ず、予約受付者を変更してください、前回と同じであれば、特記事項に変更内容と変更者の名前(レジ番号不可）を付加してくださるようお願いいたします！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CheckZu</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( Field276__c , ISCHANGED( Rroom__c ),  FALSE )</errorConditionFormula>
        <errorDisplayField>Rroom__c</errorDisplayField>
        <errorMessage>[ズ]の項目にチェックありの為に、部屋を動かすことはできません、どうしても変更したい場合は、チェックを外して、保存後、編集にて部屋を変更してください！！！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checkbooktype</fullName>
        <active>false</active>
        <description>予約名が’の方’以外は、予約タイプが入っていないとエラーとするチェック</description>
        <errorConditionFormula>if ( CONTAINS( Name , &quot;の方&quot;), false, if ( ISPICKVAL( ReservedType__c , &quot;&quot;) , true,false )     )</errorConditionFormula>
        <errorDisplayField>ReservedType__c</errorDisplayField>
        <errorMessage>予約タイプを設定してくだされば保存可能となります！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Checkbreakfast</fullName>
        <active>false</active>
        <errorConditionFormula>if ( (ISPICKVAL(ReservedType__c, &quot;泊 ２食&quot;) || ISPICKVAL(ReservedType__c, &quot;泊 朝半&quot;)) , if (Morningfood__c, false, true), if (Morningfood__c, true, false) )</errorConditionFormula>
        <errorDisplayField>Morningfood__c</errorDisplayField>
        <errorMessage>朝食のチェックを確認して下さい！</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>checkroon</fullName>
        <active>false</active>
        <description>１名様あたりの宿泊料金の入力</description>
        <errorConditionFormula>IF ( CONTAINS(TEXT(ReservedType__c) ,&quot;泊&quot;) , ISBLANK( room1__c ) , False)</errorConditionFormula>
        <errorMessage>１名様の室料を入力してください</errorMessage>
    </validationRules>
</CustomObject>